--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <script src="./level 0 - Data Types/dataTypes.js"></script>
     <script src="./level 1 - Conditionals/conditionals.js"></script>
+    <script src="./level 2 - Arrays/countries.js"></script>
+    <script src="./level 2 - Arrays/web_techs.js"></script>
     <script src="./level 2 - Arrays/arrays.js"></script>
     <script src="./level 3 - Loops/loops.js"></script>
     <script src="./level 4 - Objects/objects.js"></script>
